<resources>
    <string name="app_name">Container</string>
    <string name="action_settings">Settings</string>
    <string name="app_icon">Application Icon</string>
    <string name="loading">Loading</string>
    <string name="optimize_application">Application Optimizing…</string>
    <string name="optimize_application_with_name">Application %1$s Optimizing…</string>
    <string name="package_name_text">%1$s</string>
    <string name="pending">Pending</string>
    <string name="installing">Installing…</string>
    <string name="invalid_apk">Please select a valid APK file.</string>
    <string name="select_apk">Select an APK file</string>
    <string name="install_finished">Application Install Finished</string>
    <string name="install_finished_with_name">Application %1$s Install Finished</string>
    <string name="dismiss">dismiss</string>
    <string name="install_failed">Install Failed</string>
    <string name="installed">Installed</string>
    <string name="running">Running</string>
    <string name="running_list">Running App List</string>
    <string name="scroll_aware_fab_behavior" translatable="false">one.codehz.container.behavior.ScrollAwareFABBehavior</string>
    <string name="bottom_navigation_behavior" translatable="false">one.codehz.container.behavior.BottomNavigationBehavior</string>
    <string name="receive_apk_file">Receiving APK File</string>
    <string name="receive_apk_file_progress">Receiving APK File(%1$dKB/%2$dKB)</string>
    <string name="application_installing">Installing Application</string>
    <string name="parsing_application">Parsing Application</string>
    <string name="switch_click_function">UI Mode</string>
    <string name="about_title">About</string>
    <string name="author">Author</string>
    <string name="application_uninstalled">Application Uninstalled.</string>
    <string name="advance_virtual_package_installer">Container Package Installer</string>
    <string name="application_detail">Application Detail</string>
    <string name="value_copied">%1$s Copied</string>
    <string name="run">Run</string>
    <string name="uninstall">Uninstall</string>
    <string name="run_as">Run As…</string>
    <string name="click_switch_on">Click: Show the application details.\nLong Press: Run the application directly.</string>
    <string name="click_switch_off">Click: Run the application directly.\nLong Press: Show the application details.</string>
    <string name="task_detail_prefix">Detail: %1$s</string>
    <string name="task_container_prefix">Container: %1$s</string>
    <string name="task_installed">Installed</string>
    <string name="task_running">Running</string>
    <string name="task_setting">Settings</string>
    <string name="space_application_in_container">The amount of internal memory used by the application within the container</string>
    <string name="amount">Amount:</string>
    <string name="manage">Manage</string>
    <string name="container_application_optimization_data">Container Application Optimization Data</string>
    <string name="container_space_manager">Container Space Manager</string>
    <string name="container_application_internal_space_manager">Container Application Internal Storage Space Manager</string>
    <string name="calculating">Calculating…</string>
    <string name="install_request">Install Request</string>
    <string name="install_request_content">Do you want to install %1$s.</string>
    <string name="install">Install</string>
    <string name="uninstall_request">Uninstall Request</string>
    <string name="uninstall_request_content">Do you want to uninstall %1$s?</string>
    <string name="user_interface">User Interface</string>
    <string name="advance_settings">Advance Settings</string>
    <string name="container_space_manager_summary">Manage the space used by the application within the container.</string>
    <string name="deleted">Deleted</string>
    <string name="undo">undo</string>
    <string name="stopped">Stopped</string>
    <string name="input_name">Input the name of the new user.</string>
    <string name="user_manager">User Manager</string>
    <string name="user_manager_summary">Manage Virtual Users</string>
    <string name="id_label" translatable="false">ID:</string>
    <string name="select_user">Select User</string>
    <string name="clear_all">Clear All</string>
    <string name="clear_all_long">Clear All APP in Container</string>
    <string name="clear_all_disable">Clear All(Disable)</string>
    <string name="send_to_desktop_shortcut">Send to Desktop Shortcut</string>
    <string name="installed_application">Installed Application</string>
    <string name="foreground_notification_title">Notification Manager Service</string>
    <string name="container_has_started">Container has started</string>
    <string name="foreground_notification_enabled">Enable Foreground Service</string>
    <string name="foreground_notification_try_to_hide">Try To Hide Notification</string>
    <string name="foreground_notification_try_to_hide_on">May not work in versions higher than Nougat</string>
    <string name="foreground_notification_try_to_hide_off">The notification will be retained in the notification panel</string>
    <string name="container_system_detail_setting">Container Application Settings Page</string>
    <string name="container_system_detail_setting_summary">You can change the permissions in the settings or forced to stop the program (used to solve some of the occasional problems)</string>
    <string name="open_github">Open the Github repository</string>
    <string name="open_github_summary" translatable="false">https://github.com/codehz/container</string>
    <string name="device_information">Device Information</string>
    <string name="phone_info">Phone Info</string>
    <string name="device_id">Device Id</string>
    <string name="bluetooth_address">Bluetooth Address</string>
    <string name="privacy_protection_settings">Privacy Protection Settings</string>
    <string name="null_launch_intent">Cannot find launch activity!</string>
    <string name="mac_address">Mac Address</string>
    <string name="phone_number">Number</string>
    <string name="basic_info">Basic Info</string>
    <string name="log">Log</string>
    <string name="clear">Clear</string>
    <string name="package_name">Package Name</string>
    <string name="apk_path">Apk Path</string>
    <string name="native_library_path">Native Library Path</string>
    <string name="log_copied">Log Copied</string>
    <string name="restricted">Restricted</string>
    <string name="usage_history">Usage History</string>
    <string name="component_filter">Component Filter</string>
    <string name="add">Add</string>
    <string name="edit_regex">Edit Regex</string>
    <string name="prompt_restricted">Restrict it?</string>
    <string name="prompt_delete_item">Do you want to delete this item?</string>
    <string name="prompt_not_restricted">Do not limit it anymore?</string>
    <string name="clear_data">Clear Data</string>
    <string name="add_component_from_manifest">Add Component From Manifest</string>
    <string name="check">Check</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="list_is_empty">List is empty</string>
    <string name="foreground_service_notification">Foreground Service Notification</string>
    <string name="special_settings">Special Settings</string>
    <string name="basic">Basic</string>
    <string name="experimental_options">Experimental options</string>
    <string name="wake_lock">Wake Lock</string>
    <string name="wake_lock_postfix">%1$s:WakeLock Manager</string>
    <string name="icon_preview">Icon Preview</string>
    <string name="image_selector">Image Selector</string>
    <string name="image_exporter">Image Exporter</string>
    <string name="shortcut_label">Shortcut Label</string>
    <string name="shortcut_maker_postfix">%1$s:Shortcut Maker</string>
    <string name="select_image">Select Image</string>
    <string name="export_image">Export Image</string>
    <string name="edit_image">Edit Image</string>
    <string name="icon_exported">Icon Exported: %1$s</string>
    <string name="open">Open</string>
    <string name="user_name">User Name</string>
    <string name="user_preference">User Preference</string>
</resources>
