<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="ui"
        android:persistent="false"
        android:title="@string/user_interface">
        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_click_function"
            android:summaryOff="@string/click_switch_off"
            android:summaryOn="@string/click_switch_on"
            android:title="@string/switch_click_function"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="advance"
        android:persistent="false"
        android:title="@string/advance_settings">
        <PreferenceScreen
            android:key="space_manager"
            android:summary="@string/container_space_manager_summary"
            android:title="@string/container_space_manager"
            android:persistent="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="one.codehz.container.SpaceManagerActivity"
                android:targetPackage="one.codehz.container"/>
        </PreferenceScreen>
        <PreferenceScreen
            android:key="space_manager"
            android:summary="@string/user_manager_summary"
            android:title="@string/user_manager"
            android:persistent="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="one.codehz.container.UserManagerActivity"
                android:targetPackage="one.codehz.container"/>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="button_about"
        android:persistent="false"
        android:title="@string/about_title">
        <Preference
            android:key="static_author"
            android:persistent="false"
            android:summary="CodeHz &lt;CodeHz@Outlook.com&gt;"
            android:title="@string/author"/>
    </PreferenceCategory>
</PreferenceScreen>