<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pending"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button"
        android:layout_below="@+id/title"
        android:layout_marginEnd="4sp"
        android:text="@string/amount"/>

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/title"
        android:layout_below="@+id/title"
        android:text="@string/manage"/>

    <TextView
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pending"
        android:textAppearance="@android:style/TextAppearance"
        android:layout_alignBaseline="@+id/amount"
        android:layout_alignBottom="@+id/amount"
        android:layout_toEndOf="@+id/amount"/>

</RelativeLayout>