<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:app="http://schemas.android.com/apk/res-auto"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardElevation="2dp">

            <one.codehz.container.widget.RecycleViewWithEmptySupport
                android:id="@+id/content_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                app:emptyDrawable="@drawable/ic_empty"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/log_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_toStartOf="@+id/log_manager"
                    android:text="@string/log"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

                <TextView
                    android:id="@+id/log_manager"
                    style="@android:style/Widget.Material.Light.Button.Borderless.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/log_title"
                    android:layout_toStartOf="@+id/clear_log"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/manage"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:id="@+id/clear_log"
                    style="@android:style/Widget.Material.Light.Button.Borderless.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/log_title"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="16dp"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/clear"
                    android:textColor="@color/colorAccent"/>

                <one.codehz.container.widget.RecycleViewWithEmptySupport
                    android:id="@+id/log_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/log_title"
                    android:layout_marginTop="16dp"
                    android:clipToPadding="false"
                    android:minHeight="64dp"
                    android:nestedScrollingEnabled="false"
                    app:emptyDrawable="@drawable/ic_empty"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>